Fixed EU Cookie notice so it doesn't break the layout

--- a/web/uktrain/src/main/webapp/css/uktrain.css
+++ b/web/uktrain/src/main/webapp/css/uktrain.css
@@ -74,12 +74,17 @@ limitations under the License.
 }
 
 #eu_cookie_notice {
-    border-bottom: 1px solid black;
     padding:2px;
     margin:0;
     margin-bottom: 2px;
     background: orange;
     color: black;
+    position: absolute;
+    right: 0.5em;
+    top: 0.5em;
+    width: 25em;
+    font-size: 0.5em;
+    border: 2px groove grey;
 }
 
 #maincontent {
